--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -218,7 +218,7 @@ Many API strategies start as client-managed, but this strategy can quickly get o
 
 #### Problems
 
-- Separation of concerns
+- No separation of concerns
 - "Thick" clients and inconsistent UX
 - Logic is thrown away on every client rewrite
 - Not rapid or self-service
