--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -312,12 +312,12 @@ The body of the `POST` request that's sent to the configured GraphQL endpoint fo
 
 ##### `explorer.response.body`
 
-`JSONValue | null`
+`ExecutionResult<JSONObject> | null`
 
 </td>
 <td>
 
-The JSON representation of the GraphQL operation response. Useful for testing [post-operation scripts](#add-operation-scripts).
+The JSON representation of the GraphQL operation response. Used in [post-operation scripts](#add-operation-scripts).
 
 </td>
 </tr>
